Updated git ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 PostaMD.xcodeproj/project.xcworkspace/xcuserdata
 PostaMD.xcodeproj/xcuserdata
 PostaMD.xcworkspace/xcuserdata
-Pods/Pods.xcodeproj/xcuserdata
+Pods/
 Build
 *.xccheckout
